Screw modifier not displayed when using single vertex #59225

Closed
opened 2018-12-12 02:58:29 +01:00 by Junjun.Tang · 8 comments

System Information
Operating system: Window 10
Graphics card: GTX 970

Blender Version
Broken: 2.8, ff108aac63, blender2.8, 2018-12-11

Short description of error
Apply Screw Modifier to a single vertex, the vertex disappeared in viewport under object mode.
Apply the modifier will see the correct result.

Exact steps for others to reproduce the error
Step 1: Create a vertex.
Step 2: Apply a Screw Modifier.
Blender 2.8 - Screw Modifier - Viewport Display Error.blend

**System Information** Operating system: Window 10 Graphics card: GTX 970 **Blender Version** Broken: 2.8, ff108aac631, blender2.8, 2018-12-11 **Short description of error** Apply Screw Modifier to a single vertex, the vertex disappeared in viewport under object mode. Apply the modifier will see the correct result. **Exact steps for others to reproduce the error** Step 1: Create a vertex. Step 2: Apply a Screw Modifier. [Blender 2.8 - Screw Modifier - Viewport Display Error.blend](https://archive.blender.org/developer/F5927010/Blender_2.8_-_Screw_Modifier_-_Viewport_Display_Error.blend)
Author

Added subscriber: @joujour

Added subscriber: @joujour

#59508 was marked as duplicate of this issue

#59508 was marked as duplicate of this issue

Added subscribers: @fclem, @mont29

Added subscribers: @fclem, @mont29
Clément Foucault was assigned by Bastien Montagne 2018-12-12 16:38:01 +01:00

Afaict, final mesh is generated properly, @fclem could it be some kind of optimization done on wrong data, that skips loose edges drawing somehow?

Afaict, final mesh is generated properly, @fclem could it be some kind of optimization done on wrong data, that skips loose edges drawing somehow?

Added subscribers: @PeterGloor, @lichtwerk

Added subscribers: @PeterGloor, @lichtwerk
Brecht Van Lommel changed title from Blender 2.8 - Screw Modifier - Viewport Display Error to Screw modifier not displayed when using single vertex 2019-01-15 16:41:57 +01:00

@mont29 this has to do with ME_LOOSEEDGE not being set. Why is that so? If we are not supposed to rely on ME_LOOSEEDGE how should I detect loose edges in Mesh?

@mont29 this has to do with ME_LOOSEEDGE not being set. Why is that so? If we are not supposed to rely on ME_LOOSEEDGE how should I detect loose edges in Mesh?

This issue was referenced by 2866c74208

This issue was referenced by 2866c742080d455df2b28d2f25ed6aa78ef03565

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59225
No description provided.