Fix T59225 Screw modifier not displayed when using single vertex